Align DB to port 3306 for HeidiSQL + add Docker compose and docs (all_in_one SQL)

--- a/server-data/server.cfg
+++ b/server-data/server.cfg
@@ -33,8 +33,8 @@ onesync on
 set sv_enforceGameBuild 3095
 setr onesync_population false
 
-# Base de dados (MariaDB em container local)
-set mysql_connection_string "mysql://qbcore:qbcore_pass@127.0.0.1:3307/qbcore"
+# Base de dados (MySQL/MariaDB local na porta 3306)
+set mysql_connection_string "mysql://root:fivemrootpass@127.0.0.1:3306/qbcore?charset=utf8mb4&connectTimeout=10000"
 set mysql_slow_query_warning 200
 set mysql_debug false
 
