Add pt-valuetransport: transporte de valores realista (backend, client, DB, integração)

--- a/server-data/db/docker-compose.yml
+++ b/server-data/db/docker-compose.yml
@@ -13,5 +13,6 @@ services:
   MARIADB_PASSWORD: qbcore_pass
     volumes:
       - db_data:/var/lib/mysql
+      - ./init:/docker-entrypoint-initdb.d
 volumes:
   db_data:
