--- a/server-data/server.cfg
+++ b/server-data/server.cfg
@@ -82,6 +82,8 @@ ensure pt-patrols
 ensure pt-inspections
 ensure pt-firefighters
 
+ensure pt-valuetransport
+
 # Screenshot dependency for icons and phone camera
 ensure screenshot-basic
 
